[project]
name = "guhema"
version = "0.1.0"
description = ""
authors = [
    {name = "Christian Meter", email = "cmeter@googlemail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==4.1.5",
    "django-modeltranslation>=0.18.7",
    "django-autoslug>=1.9.8",
    "easy-thumbnails>=2.8.5",
    "django-pagedown>=2.2.1",
    "django-forms-bootstrap>=3.1.0",
    "django-markdownify>=0.9.2",
    "gunicorn>=20.1.0",
    "reportlab>=3.6.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "products", "news", "fairs", "downloads"]
